# korenani

./: .gitignore  gradle.properties  settings.gradle.kts
.kiro/specs/gemma4-camera-viewer/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/litert-lm-engine/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_placeholder.cpp
app/src/main/kotlin/com/example/gemma4viewer/: MainActivity.kt  ModelConfig.kt
app/src/main/kotlin/com/example/gemma4viewer/engine/: LiteRtLmEngine.kt  LlamaEngine.kt
app/src/main/kotlin/com/example/gemma4viewer/repository/: InferenceRepositoryImpl.kt  ModelRepositoryImpl.kt
app/src/main/kotlin/com/example/gemma4viewer/ui/: CameraPreviewSection.kt  MainScreen.kt  ResultSection.kt
app/src/main/kotlin/com/example/gemma4viewer/util/: ImageUtils.kt
app/src/main/kotlin/com/example/gemma4viewer/viewmodel/: AppState.kt  MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/gemma4viewer/: ModelConfigTest.kt
app/src/test/java/com/example/gemma4viewer/engine/: LiteRtLmEngineTest.kt  LlamaEngineTest.kt
app/src/test/java/com/example/gemma4viewer/repository/: InferenceRepositoryImplTest.kt  InferenceRepositoryInferTest.kt  ModelRepositoryDownloadTest.kt  ModelRepositoryImplTest.kt
gradle/: libs.versions.toml
(+9 files in other folders)
